--- a/Team-Project/styles/_fonts.scss
+++ b/Team-Project/styles/_fonts.scss
@@ -1,1 +1,4 @@
 @import url('https://fonts.googleapis.com/css2?family=Manrope&family=Open+Sans&display=swap');
+
+$manrope:'Manrope', sans-serif;
+$open: 'Open Sans', sans-serif;
