--- a/Team-Project/style.css
+++ b/Team-Project/style.css
@@ -1,12 +1,180 @@
-@import url("https://fonts.googleapis.com/css2?family=Manrope&family=Open+Sans&display=swap"); /*Colors*/ /*General styles*/
+@import url("https://fonts.googleapis.com/css2?family=Manrope&family=Open+Sans&display=swap"); /*Colors*/
+.submit-form {
+  width: 90%;
+  height: 391px;
+  margin: 0 auto;
+  background-color: #0A2640;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  position: relative;
+}
+.submit-form .template {
+  width: 70%;
+  color: #ffffff;
+  font-family: "Manrope", sans-serif;
+  font-size: 24px;
+  line-height: 40px;
+  text-align: center;
+}
+.submit-form .buttons {
+  width: 70%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
+  -webkit-column-gap: 15px;
+     -moz-column-gap: 15px;
+          column-gap: 15px;
+}
+.submit-form .buttons .email-input {
+  margin: 0 10px;
+  width: 60%;
+  height: 60px;
+  border: none;
+  border-radius: 20px;
+  padding: 0 20px;
+}
+.submit-form .buttons .email-input :hover {
+  -webkit-filter: contrast(2.5);
+          filter: contrast(2.5);
+}
+.submit-form .buttons .start {
+  width: 30%;
+  height: 60px;
+  border: none;
+  border-radius: 20px;
+  padding: 0 20px;
+  background-color: #65E4A3;
+}
+.submit-form .buttons .start .start :hover {
+  -webkit-filter: contrast(1.5);
+          filter: contrast(1.5);
+}
+
+.footer {
+  width: 90%;
+  margin: 50px auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-column-gap: 40px;
+     -moz-column-gap: 40px;
+          column-gap: 40px;
+}
+.footer .logo {
+  width: 25%;
+  margin-right: 20px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+.footer .logo .logo img {
+  width: 156px;
+  height: 41px;
+}
+.footer .logo .text {
+  font-family: "Open Sans", sans-serif;
+  font-size: 16px;
+  line-height: 28px;
+  color: #777777;
+}
+@media screen and (max-width: 768px) {
+  .footer .logo {
+    width: 45%;
+  }
+}
+@media screen and (max-width: 320px) {
+  .footer .logo {
+    width: 85%;
+  }
+}
+.footer .career {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
+  margin: 0%;
+}
+.footer .footer-item {
+  width: 20%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  row-gap: 40px;
+}
+@media screen and (max-width: 768px) {
+  .footer .footer-item {
+    width: 30%;
+  }
+}
+@media screen and (max-width: 320px) {
+  .footer .footer-item {
+    width: 85%;
+  }
+}
+.footer .item-header {
+  font-family: "Open Sans", sans-serif;
+  font-size: 20px;
+  font-weight: 700;
+  line-height: 32px;
+  color: #000000;
+}
+.footer .item-name {
+  font-family: "Open Sans", sans-serif;
+  font-size: 20px;
+  line-height: 32px;
+  color: #777777;
+}
+
+/*General styles*/
 * {
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 body {
   width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
 .wrapper {
@@ -17,5 +185,3 @@ body {
 /*Header*/
 /*Main*/
 /*Footer*/
-
-/*# sourceMappingURL=style.css.map */
