--- a/Team-Project/styles/_footer.scss
+++ b/Team-Project/styles/_footer.scss
@@ -28,6 +28,7 @@
         .email-input{
             margin: 0 10px;
             width: 60%;
+            max-width: 370px;
             height: 60px;
             border: none;
             border-radius: 20px;
