--- a/Team-Project/styles/_feedback.scss
+++ b/Team-Project/styles/_feedback.scss
@@ -18,7 +18,7 @@
       margin-bottom: 72px;
       width: 100%;
       max-width: 716px;
-      font-family: "Manrope";
+      font-family: $manrope;
       font-style: normal;
       font-weight: 400;
       font-size: 48px;
