--- a/Team-Project/styles/_our-advantages.scss
+++ b/Team-Project/styles/_our-advantages.scss
@@ -23,7 +23,8 @@
     gap: 20px;
 
     .text-block__description {
-      font-family: "Manrope";
+      font-family: $manrope
+      ;
       font-style: normal;
       font-weight: 400;
       font-size: 36px;
@@ -96,10 +97,6 @@
     display: inline-block;
     justify-content: center;
     align-items: center;
-
-    img {
-      // display: none;
-    }
   }
 }
 // remove "ckeck icons" when the screen width is less than 500px
