--- a/Team-Project/styles/_our-blog.scss
+++ b/Team-Project/styles/_our-blog.scss
@@ -24,7 +24,7 @@
     }
 
     p {
-      font-family: "Manrope";
+      font-family: $manrope;
       font-style: normal;
       font-weight: 400;
       font-size: 48px;
